Fixed: navigation panel overlap on smaller devices
yet another hotfix for the same fucking bug fml.

--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -149,7 +149,7 @@ body {
   transition: var(--trans-slow);
   position: fixed;
   display: grid;
-  bottom: -100%;
+  bottom: -50%;
   height: auto;
 }
 .header-mobile-nav-links {
