--- a/src/style/sass/_styles.scss
+++ b/src/style/sass/_styles.scss
@@ -83,7 +83,7 @@
             transition: var(--trans-slow);
             position: fixed;
             display: grid;
-            bottom: -100%;
+            bottom: -50%;
             height: auto;
             
             &-links {
